<resources>
    <string name="app_name">CustoViagem</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total sera de:</string>
    <string name="total_gasto">R$ 0</string>
    <string name="calcular">Calcular</string>

    <string name="validation_fill_all_fields">Preencha todos os campos.</string>
</resources>