<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="48dp"
        android:hint="@string/distancia" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/total_de_quilometros"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="48dp"
        android:hint="@string/preco" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/preco_por_litro"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="48dp"
        android:hint="@string/autonomia" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/kms_por_litro"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/seu_gasto_total_sera_de"
        android:textAllCaps="true"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:textColor="@color/blue"
        android:text="@string/total_gasto"
        android:textAllCaps="true"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_calc"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:backgroundTint="@color/blue"
        android:text="@string/calcular"/>


</LinearLayout>